# HydDown

./: .gitignore  CLAUDE.md  CLEANUP_PLAN.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Manual.md  NEM_HEAT_TRANSFER_COMPLETE_FIX.md  NEM_IMPLEMENTATION_METHODOLOGY.md  NEM_VALIDATION_TASK.md  README.md  Test.md  compare_models.py  compare_thin_models.py  controlvalve.yml  coverage.xml  cv_filling.yml  filling.yml  fillingH2_woodfield.yml  index.md  input.yml  main.py  nem_droste_exp1.yml  nem_droste_exp2.yml  nem_droste_exp3.yml  psv.yml  requirements.txt  run_validation_suite.py  run_validation_with_plots.py  setup.cfg  setup.py  streamlit_app.py  streamlit_genapp.py  streamlit_h2app.py  streamlit_sbapp.py  test_UV.py  test_main.py  test_wetted_fix.py  transport.py
.github/workflows/: Advanced.yaml  Compile_manual.yaml  codeql-analysis.yml  compile-manual.yml  docs.yml  (+4 more)
docs/: BIBLIOGRAPHY_FIX.md  CONVERSION_COMPLETE.md  GITHUB_ACTIONS_FIX.md  MANUAL.md  OPTIONAL_IMPROVEMENTS_COMPLETE.md  PDF_EPUB_COMPLETE.md  README.md  SETUP_COMPLETE.md  YAML_EXAMPLES_FIX.md  compile_book.bat  convert_manual.py  convert_pdf_images.py  fix_pandoc_syntax.py  references.bib  title.txt
examples/: Striednig_fillingH2.yml  filling.yml  fillingH2.yml  input.yml  isentropic.yml  ng.yml  ng_outlet.yml  psv_sb.yml  scema_check.yml
hyddown/: __init__.py  fire.py  hdclass.py  hyddown.py  tests.py  transport.py  validator.py
joss/: paper.bib  paper.md
scripts/: hyddown_main.py  hyddown_main_sb_wetted.py  main_bimaterial.py  streamlit_app.py  streamlit_bdv_sbapp.py  streamlit_cvapp.py  streamlit_genapp.py  streamlit_h2app.py  streamlit_sbapp.py  streamlit_simple.py  validation_plot.py
src/: main.py
validation/: 1D-check-calc-openthermo.yml  Air_3-7kPa_21mm.yml  Air_3-7kPa_271mm.yml  Air_790kPa_21mm.yml  Air_filling_271mm.txt  Byrnes_run7.yml  Byrnes_run8.yml  Byrnes_run9.yml  CO2_pipe.yml  CO2_pipe_DN100.txt  CO2_pipe_DN200.txt  CO2_pipe_DN250.txt  CO2_tank.txt  CO2_tank_BDV.yml  CO2_tank_boil_off.yml  CO2_tank_boil_off_small.yml  N2_Exp_I1.yml  N2_Exp_I1_HEM.yml  NG_Exp.yml  NG_Exp_S9.yml  Striednig_fillingH2.yml  Striednig_fillingH2_10MPa_min.yml  Striednig_fillingH2_30MPa_min.yml  Striednig_fillingH2_5MPa_min.yml  TypeIII.yml  Unisim_Type_IV.csv  demiguel.yml  demiguel_type_III.yml  dickens_typeIII.yml  dischargeH2_woodfield.yml  fillingH2_woodfield.yml  kit.yml  kit_composite.yml  kit_composite_typeIII.yml  mass_rate_filling_Woodfield.txt  melideo_EXP01.yml  rupture_history.csv  rupture_history_jet.csv  unisim-1D-H2 copy.yml  unisim-1D-H2.yml  (+6 more)
(+143 files in other folders)
