[metadata]
name = HydDown
version = 0.14
author = Anders Andreasen
author_email = andr1976@gmail.com
description = Hydrogen (or other pure gas phase species) pressure vessel filling and discharge calculations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/andr1976/HydDown/
project_urls =
    Bug Tracker = https://github.com/andr1976/HydDown/new/main/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = hyddown
packages = find:
python_requires = >=3.6

[options.packages.find]
where = hyddown
