[metadata]
name = HydDown
version = 0.15
author = Anders Andreasen
author_email = andr1976@gmail.com
description = Hydrogen (or other pure gas phase species) pressure vessel filling and discharge calculations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/andr1976/HydDown/
project_urls =
    Bug Tracker = https://github.com/andr1976/HydDown/new/main/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
scripts = 
    scripts/hyddown_main.py
    scripts/streamlit_app.py
python_requires = >=3.6
include_package_data = True

[options.packages.find]
where = src
