[metadata]
name = HydDown
version = 0.20.0
author = Anders Andreasen
author_email = andr1976@gmail.com
description = Hydrogen (or other pure gas phase species) pressure vessel filling and discharge calculations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/andr1976/HydDown/
project_urls =
    Bug Tracker = https://github.com/andr1976/HydDown/new/main/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
package_dir = 
    = src
packages = find:
scripts = 
    scripts/hyddown_main.py
    scripts/streamlit_app.py
python_requires = >=3.6, <3.12
include_package_data = True
install_requires = 
    tqdm
    streamlit>=0.89
    pandas>=1.1.4
    matplotlib>=3.3.3
    numpy>=1.19.5
    pytest>=6.2.3
    Cerberus>=1.3.3
    CoolProp>=6.4.1
    PyYAML>=5.4.1
    scipy>=1.6.0
    fluids
[options.packages.find]
where = src
